--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.3",
     "vue": "^2.6.11",
+    "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-router": "^4.1.1",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
