Automatically scroll down when new message is received

--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,8 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-debugger": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
