Implement showing new groups immediately for all users of the group

--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,8 @@
     ],
     "rules": {
       "no-console": "off",
-      "no-debugger": "off"
+      "no-debugger": "off",
+      "no-unused-vars": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
