--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=
-DB_NAME=socket_io_chat
+DB_DSN=DB_DSN=mysql:host=localhost;port=3306;dbname=socket_io_chat
+DB_HOST=
+DB_USERNAME=root
+DB_PASSWORD=
+DB_NAME=
+DB_PORT=3306
