--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
     "mysql": "^2.17.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "socketio-jwt": "^4.5.0"
   }
 }
